# allsky

./: .gitignore  CMakeLists.txt  Makefile  README mode mean.md  README.md  RPiHQ_modeMean.h  allsky.sh  capture_RPiHQ.cpp  config.sh.repo  install.sh  keogram.cpp  mode_RPiHQ_mean.cpp  mode_RPiHQ_mean.h
.github/workflows/: CI_2  ci_compile.yml
config_repo/: config.sh.repo
gui/: install.sh
scripts/: allsky_mfs.sh  check.sh  darkCapture.sh  endOfNight.sh  saveImage.sh  saveImageDay.sh  saveImageNight.sh
src/: Makefile  allsky.cpp  allsky.h  allskyStatic.h  allsky_common.h  allsky_helper.cpp  allsky_helper.h  camera.cpp  camera.h  camera_newcam.cpp  camera_newcam.h  camera_rpihq.cpp  camera_rpihq.h  camera_zwo.cpp  camera_zwo.h  capture.cpp  capture_RPiHQ.cpp  keogram.cpp  log.cpp  log.h  mean.cpp  mean.h  modeMean.cpp  modeMean.h  mode_RPiHQ_mean.cpp
src/include/: mode_RPiHQ_mean.h
test/integration/: endOfNight_mocked  mock_config.sh  mock_endOfNight.sh  mock_sunwait.sh  mock_variables.sh  saveImage_mocked  sunwait_mocked  test_dayNightChange.sh  test_saveImage.sh  test_saveImage_darkSubtract.sh  test_saveImage_darks.sh  test_saveImage_darks_notificationimages.sh  test_upload.sh  upload_mocked
test/integration/allskyTest/: allskyTest.sh
test/integration/mock/: config_mocked  darkCapture_mocked  lftp  mock_config.sh  mock_darkCapture.sh  mock_ftp-settings.sh  mock_saveImage.sh  mock_settings.sh  mock_sunwait.sh  mock_upload.sh  mock_variables  saveImage_mocked  upload_mocked  variables_mocked
test/test/: CMakeLists.txt  ExampleTests.cpp
test/unittest/: CMakeLists.txt  UT_Allsky.cpp
